--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <title>index</title>
 </head>
 <body>
+  <img src="./img/img.jpg" alt="">
+  <div class="img"></div>
   <input type="text">
 </body>
 </html>
