add mini-css-extract-plugin and css-hot-loader

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>index</title>
 </head>
 <body>
-  <img src="./img/img.jpg" alt="">
+  <img src="./img/img.jpg" alt="">qweqhgjjugugu
   <div class="img"></div>
   <input type="text">
 </body>
