--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
   <title>index</title>
 </head>
 <body>
-  <img src="./img/img.jpg" alt="">qweqhgjjugugu
+  <img src="./img/img.jpg" alt="">qw
   <div class="img"></div>
   <input type="text">
+  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 </body>
 </html>
