--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>index</title>
 </head>
 <body>
-  <img src="./img/img.jpg" alt="">qw
+  <img src="./img/img.jpg" alt="">q12
   <div class="img"></div>
   <input type="text">
 </body>
